updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Kendra Harman, 27 years old.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and raised in Arizona. Lived in Wickenburg, AZ most of my life before coming to Phoenix.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Photography. Watching movies. Crocheting. Making Jewlery. Roller skating.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm finally figuring out what I want to do. I would love to work for a human trafficking non-profit like Thorn or A21</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Avondale, Arizona at the moment </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Becasue this is the future and I want to learn the skills that goes along with it. I have always loved computers and learning more about them.</p>
     </section>
 
     <footer id="footer">
